# crawler-gov-website

gov_edu_crawler/: .gitignore  chk_active_db.py  debug_brin.py  debug_brin_api.py  debug_brin_api2.py  debug_brin_api4.py  debug_brin_js.py  debug_brin_js2.py  debug_brin_js3.py  main.py  pyproject.toml  requirements.txt
gov_edu_crawler/core/: db_manager.py  discovery.py  scraper.py
gov_edu_crawler/instructions/: debug.py
gov_edu_crawler/instructions/brin/: brin.md
gov_edu_crawler/instructions/indonesia go/: indonesia.md
gov_edu_crawler/instructions/indonesia kaya/: indonesia kaya.md
gov_edu_crawler/instructions/kemdikdasmen/news/: kemdidasmen_famliy.MD  kemdikdasmen_strategy.md
gov_edu_crawler/instructions/kemenag/: kemenag.md
gov_edu_crawler/instructions/kemendiktisaintek/news/: kemendiktisaintek_family.md  kemendiktisaintek_strategy.md
gov_edu_crawler/instructions/kemensos/news/: kemensos_family.md  kemensos_strategy.md
gov_edu_crawler/instructions/lpdp/: lpdp news.md
gov_edu_crawler/instructions/perpusnas/: perprusnas.md
gov_edu_crawler/instructions/puspresnas/: puspresnas_news.md
gov_edu_crawler/instructions/wonderfull indonesia/: wonderful.md
gov_edu_crawler/notebooks.ipynb/: eda.ipynb
gov_edu_crawler/strategies/: base_strategy.py  brin.py  indonesia_go.py  indonesia_kaya.py  indonesia_travel.py  inertia_engine.py  kemdiktisaintek.py  kemenag.py  kemendikdasmen.py  kemensos.py  lpdp.py  perpusnas.py  wonderful_indonesia.py
