[project]
name = "gov-edu-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.8.6",
    "jupyter>=1.1.1",
    "lxml>=5.3.0, <6.0.0", # Diturunkan agar crawl4ai mau masuk
    "playwright>=1.47.0", # Diturunkan versinya
]
